--- a/style.css
+++ b/style.css
@@ -135,10 +135,18 @@ body {
 }
 
 .count {
-    font-size: 2em;
+    font-size: 1.6em;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.37);
+    padding: 10px;
+
     position: absolute;
     left: 0;
     top: 0;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 /* Animations */
